--- a/Practice_data_loading.ipynb
+++ b/Practice_data_loading.ipynb
@@ -260,10 +260,18 @@
     },
     {
       "cell_type": "code",
-      "source": "# Write your code below and press Shift+Enter to execute.\n",
-      "metadata": {},
-      "outputs": [],
-      "execution_count": null
+      "source": "# Write your code below and press Shift+Enter to execute.\nprint(df.info())",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 238 entries, 0 to 237\nData columns (total 12 columns):\n #   Column            Non-Null Count  Dtype  \n---  ------            --------------  -----  \n 0   Manufacturer      238 non-null    object \n 1   Category          238 non-null    int64  \n 2   Screen            238 non-null    object \n 3   GPU               238 non-null    int64  \n 4   OS                238 non-null    int64  \n 5   CPU_core          238 non-null    int64  \n 6   Screen_Size_inch  234 non-null    object \n 7   CPU_frequency     238 non-null    float64\n 8   RAM_GB            238 non-null    int64  \n 9   Storage_GB_SSD    238 non-null    int64  \n 10  Weight_kg         233 non-null    object \n 11  Price             238 non-null    int64  \ndtypes: float64(1), int64(7), object(4)\nmemory usage: 18.7+ KB\nNone\n",
+          "output_type": "stream"
+        }
+      ],
+      "execution_count": 13
     },
     {
       "cell_type": "markdown",
